Fixed btn-purchase hover effect on IE
added .reset-filter(); method to btn-purchase, so that in IE it will not
show gradient, and thus can show hover effect properly. Other browsers
not affected.

--- a/swatchmaker/bootstrap/less/bootswatch.less
+++ b/swatchmaker/bootstrap/less/bootswatch.less
@@ -187,6 +187,7 @@ a:hover {
 
 	.buttonBackground(@btnPurchaseBackground, @btnPurchaseBackgroundHighlight);
 	.vertical-4-colors();
+  .reset-filter();
 }
 
 .btn-group.open {
@@ -282,7 +283,6 @@ a:hover {
     background-image: -o-linear-gradient(@startColor, @mid-topColor @mid-topColorStop, @mid-btmColor @mid-btmColorStop, @endColor);
     background-image: linear-gradient(@startColor, @mid-topColor @mid-topColorStop, @mid-btmColor @mid-btmColorStop, @endColor);
     background-repeat: no-repeat;
-    filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",argb(@startColor),argb(@endColor))); // IE9 and down, gets no color-stop at all for proper fallback
   }
 
 //Creates Sharp (non-rounded) corners
